--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
 
     <string name="hint_title">Title</string>
     <string name="button_create">Create</string>
+    <string name="created_by_label">created by&#160;</string>
+    <string name="last_changed_label">last changed at&#160;</string>
 </resources>
