--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
 
     <string name="hint_title">Title</string>
     <string name="button_create">Create</string>
+    <string name="button_edit">edit</string>
     <string name="created_by_label">created by&#160;</string>
     <string name="last_changed_label">last changed at&#160;</string>
+    <string name="edit_menu_item_label">Edit</string>
 </resources>
