--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="last_changed_label">last changed at&#160;</string>
     <string name="edit_menu_item_label">Edit</string>
     <string name="remove_menu_item">remove</string>
-    <string name="message_removing">Are you sure you want to remove this list?</string>
+    <string name="message_removing">Are you sure you want to remove this item?</string>
     <string name="dialog_title_remove">Remove shopping list</string>
 </resources>
