--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Shop List</string>
+    <string name="title_create_account">Create Account</string>
     <string name="pager_title_shopping_lists">Shopping Lists</string>
     <string name="pager_title_meals">Meals</string>
 
@@ -12,4 +13,12 @@
     <string name="remove_menu_item">remove</string>
     <string name="message_removing">Are you sure you want to remove this item?</string>
     <string name="dialog_title_remove">Remove shopping list</string>
+
+    <!--HINTS-->
+    <string name="hint_user_name">Your name</string>
+    <string name="hint_user_email">Email</string>
+    <string name="hint_user_password">Password</string>
+    <string name="btn_create_account">create account</string>
+    <string name="btn_sign_in">Sign In</string>
+    <string name="sign_in_label">Already have an account?</string>
 </resources>
