--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="hint_user_password">Password</string>
     <string name="btn_create_account">create account</string>
     <string name="btn_sign_in">Sign In</string>
+    <string name="btn_sign_up">Sign Up</string>
     <string name="sign_in_label">Already have an account?</string>
+    <string name="sign_up_label">Don\'t have an account?</string>
 </resources>
