--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="message_removing">Are you sure you want to remove this item?</string>
     <string name="dialog_title_remove">Remove shopping list</string>
     <string name="bought_by">Bought by %1$s</string>
+    <string name="i_do_shopping">I\'m doing shopping</string>
 
     <!--HINTS-->
     <string name="hint_user_name">Your name</string>
